@@ -42,6 +42,7 @@ t/v1_ParentClasses.t
 t/v1_Storable.t
 t/v2_Oracle.t
 t/v2_delete.t
+t/v2_generator.t
 t/v2_multischema.t
 t/v2_paths.t
 t/v2_json.t
